upgrade to eureka-client 2.0.0, hazelcast 5.2.1, jakarta and jdk17 : fix UTs (mockito UnnecessaryStubbingException) ans JDK cmd line